# hashcode_training

./: CMakeLists.txt  README.md  conf.yaml  init.py
contest/: contest.yaml
contest/book_scanning/: task.yaml
contest/even_more_pizza/: task.yaml
contest/more_pizza/: task.yaml
loaders/: hashcode_yaml.py
problems/book_scanning/: contest.yaml
problems/book_scanning/book_scanning/: task.yaml
src/checkers/: CMakeLists.txt  book_scanning.cpp  even_more_pizza.cpp  more_pizza.cpp
src/cms/cmscontrib/loaders/: __init__.py
src/isolate/: default.cf
